--- a/src/gui/conferirPonto.form
+++ b/src/gui/conferirPonto.form
@@ -108,17 +108,23 @@
         <Component class="javax.swing.JTable" name="jTable1">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="6" rowCount="4">
+              <Table columnCount="7" rowCount="4">
                 <Column editable="true" title="Nome" type="java.lang.Object"/>
                 <Column editable="true" title="Chegada" type="java.lang.Object"/>
                 <Column editable="true" title="Almo&#xe7;o" type="java.lang.Object"/>
                 <Column editable="true" title="Fim do Almo&#xe7;o" type="java.lang.Object"/>
                 <Column editable="true" title="Sa&#xed;da" type="java.lang.Object"/>
                 <Column editable="true" title="Altera&#xe7;&#xe3;o" type="java.lang.Object"/>
+                <Column editable="true" title="Atestado" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
