--- a/src/gui/configuracoes.form
+++ b/src/gui/configuracoes.form
@@ -125,7 +125,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButton2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Alterar senha"/>
+            <Property name="text" type="java.lang.String" value="Cadastrar contrato"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
